--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "exercise-1.js",
   "type": "module",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^4.10.0"
+    "mongodb": "^4.10.0",
+    "nodemon": "^3.0.2"
   }
 }
